2005-08-23 Mikhail Khodjaiants
	Bug 107787: Casting variable to array causes NPE.
	* CIndexedValue.java

2005-08-04 Alain Magloire
	ClastCastException being throw in CThread.getAdapter(IRunToLine.class);
	Patch solution to ignore the exception.

	* src/org/eclipse/cdt/debug/internal/core/model/CThread.java

2005-07-29 Mikhail Khodjaiants
	The registers with errors shouldn't be disposed when the target is suspended.
	Added synchronization to the "getRegisters" method.
	* CRegisterGroup.java

2005-07-28 Mikhail Khodjaiants
	Bug 104421: Register view can not show correct value when switch between different thread or stack frame.
	* ICDIRegister.java
	* ICDIStackFrame.java
	* ICDITarget.java
	* ICDIThread.java
	* ICDIVariable.java
	* ICDIVariableDescriptor.java
	* CRegisterManager.java
	* CExpression.java
	* CGlobalVariable.java
	* CIndexedValue.java
	+ CLocalVariable.java
	* CRegister.java
	* CRegisterGroup.java
	* CStackFrame.java
	* CValue.java
	* CVariable.java
	* CVariableFactory.java

2005-07-28 Mikhail Khodjaiants
	Bug 103567: breakpoints view of of sync w/CDT CVS HEAD
	* CBreakpointManager.java

2005-07-26 Mikhail Khodjaiants
	Bug 105224: Two identical directory source container types.
	* plugin.properties

2005-07-26 Mikhail Khodjaiants
	Bug 102929: Race conditions when setting breakpoints at launch.
	The initial breakpoint settings, stop in main and resume are batched 
	in one job. This garantees the right order of commands sent to the backend.
	* CDIDebugModel.java
	* CBreakpointManager.java
	* CDebugTarget.java

2005-07-22 Alain Magloire
	Fix to Copyright.
	* src/org/eclipse/cdt/debug/internal/core/CBreakpointManager.java

2005-07-18 Alain Magloire
	new launch constant for the MI protocol
	* src/org/eclipse/cdt/debug/core/ICDTLaunchConfigurationConstants.java

2005-07-14 Mikhail Khodjaiants
	Bug 103917: NPE in Variables View.
	* AbstractCValue.java

2005-07-14 Mikhail Khodjaiants
	Bug 103784: NPE in source lookup.
	* CSourceLookupDirector.java
